2016/11/29 v130
    1. Force refresh when flyout spell is updated.

2016/11/26 v129
    1. Fix the keep fade out option for action buttons.

2016/11/26 v128
    1. Fix the random mount spell's button state.

2016/11/26 v127
    1. Update for New PLoop System.
    2. Fix several bugs.

2016/11/20 v125
    1. Fix the double click won't select words in the Multiline-textbox and Code Editor, blz may changed the base.

2016/10/30 v124
    1. Add support to show upgrade item for bag slot action buttons.(not work until blz fix it)

2016/10/27 v123
    1. Update for WOW 7.1

2016/10/15: IGAS v120
    1. Fix for PLoop v155 version.

2016/10/01: IGAS v119
    1. Fix ActiveThread error for System.Array.
    2. Improve the dropdownlist so sub-menus won't be blocked by parent's

2016/09/30: IGAS v118
    1. Fix the aurapanel's refreshing.

2016/09/14: IGAS v117
    1. The PLoop is removed, it's a standalone addon now.

2016/09/13: IGAS v116
    1. Use RegisterAutoHide to fix the hover spell bindings not clear for IFSpellHandler.

2016/09/04: IGAS v115
    1. Fix action buttons for spells not in the spell books.

2016/09/01: IGAS v114
    1. The BagSlotHandler no longer refresh the buttons that is hidden, it should fix lags in some condition.

2016/08/29: IGAS v113
    1. Block noname totem seems shouldn't be seen.

2016/08/28: IGAS v112
    1. Fix the IFTotem and TotemBar.

2016/08/28: IGAS v111
    1. Fix the lag for sorting container's items.
    2. Fix error for IFPortrait.

2016/08/24: IGAS v110
    1. Add RegisterUnitEvent for System.Widget.Frame.

2016/08/22: IGAS v109
    1. Fix the baghandler for bank bag.

2016/08/22: IGAS v108
    1. Fix for custom handler, bag handler and bagslot handler.

2016/08/15: IGAS v107
    1. Fix the bagslot won't display count when first login.

2016/08/14: IGAS v106
    1. Fix error for TreeView.

2016/08/14: IGAS v105
    1. Fix bugs and finished the bag-slot handler.

2016/08/04: IGAS v104